--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <!--SEO-->
+    <title>Megatrailers, osmelhores trailers de Filmes , jogos e TV na internet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
+    <meta property="og:title" content="Megatrailers, osmelhores trailers de Filmes , jogos e TV na internet">
+    <meta property='og:site_name' content="Megatrailers">
+    <meta property='og:description' content="Assiste os melhores treile de jogos e filmes atualizado frequentemente">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://www.megatreiler.com.br">
+    <meta property="og:image" content="imagem\cinema.jpg">
+    <link rel="icon" href="imagem/clap.png">
+    <link rel="stylesheet" type="text/css" href="css/megatrailers.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald" rel="stylesheet">
+   </head>
 <body>
-    
+    <section class="chamada">
+        <header class="area_chamada">
+            <h2 class="titulo">Star Wars</h2>
+            <h2 class="subtitulo"> O Desperta da Força</h2>
+        </header>
+    </section>
 </body>
 </html>
