--- a/index.html
+++ b/index.html
@@ -15,13 +15,34 @@
     <link rel="icon" href="imagem/clap.png">
     <link rel="stylesheet" type="text/css" href="css/megatrailers.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald" rel="stylesheet">
-   </head>
+</head>
 <body>
     <section class="chamada">
+        <div class="parte_superior">
+            <div class="logo">
+                <img src="imagem/logo.png" alt="Logo do saite">
+            </div>
+            <div class="banner">
+                <img src="imagem/banner.png" alt="banner superior">
+            </div>
+            <div class="logo_face">
+                <img src="imagem/lofo-face.png" alt="logo facebook">
+            </div>
+        </div>
         <header class="area_chamada">
-            <h2 class="titulo">Star Wars</h2>
-            <h2 class="subtitulo"> O Desperta da Força</h2>
+            <h2 class="titulo font300">: : :Star Wars: : :</h2>
+            <h2 class="titulo font250 cinza">O Desperta da Força</h2>
         </header>
     </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 </html>
