--- a/index.html
+++ b/index.html
@@ -15,24 +15,70 @@
     <link rel="icon" href="imagem/clap.png">
     <link rel="stylesheet" type="text/css" href="css/megatrailers.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
     <section class="chamada">
-        <div class="parte_superior">
-            <div class="logo">
-                <img src="imagem/logo.png" alt="Logo do saite">
-            </div>
+        <div class="parte_superior"> 
             <div class="banner">
                 <img src="imagem/banner.png" alt="banner superior">
             </div>
-            <div class="logo_face">
-                <img src="imagem/lofo-face.png" alt="logo facebook">
-            </div>
+        </div>
+        <div class="logo">
+            <img src="imagem/logo.png" alt="Logo do saite">
+        </div>
+        <div class="logo_face">
+            <div class="boas_vindas">Login,<br>Cadastre-se</div>
+            <img src="imagem/logo face.png" alt="logo facebook">
         </div>
         <header class="area_chamada">
             <h2 class="titulo font300">: : :Star Wars: : :</h2>
             <h2 class="titulo font250 cinza">O Desperta da Força</h2>
         </header>
+    </section>
+    <section class="miniaturas">
+        <div class="menu">
+            <ul class="horizontal titulo">
+                <li class="ativo">Mais Populares</li>
+                <li>Em Cartaz</li>
+                <li>Meus Favoritos</li>
+            </ul>
+            <ul class="horizontal titulo">
+                <li class="ativo"><i class="fa fa-film grande"></i></li>
+                <li><i class="fa fa-gamepad grande"></i></li>
+                <li><i class="fa fa-tv grande"></i></li>
+            </ul>
+        </div>
+        <div class="figuras">
+            <figure>
+                <img src="imagem/arranhaceu.jpg" alt="arranhacel">
+                <figcaption>Arranhaceu</figcaption>
+            </figure>
+            <figure>
+                <img src="imagem/casa-do-lago.jpg" alt="arranhacel">
+                <figcaption>Casa do Lago</figcaption>
+            </figure>
+            <figure>
+                <img src="imagem/desejo-de-matar_1.jpg" alt="arranhacel">
+                <figcaption>Desejo de Matar</figcaption>
+            </figure>
+            <figure>
+                <img src="imagem/escobar.jpg" alt="arranhacel">
+                <figcaption>Escobar</figcaption>
+            </figure>
+            <figure>
+                <img src="imagem/extinção.jpg" alt="arranhacel">
+                <figcaption>Extinção</figcaption>
+            </figure>
+            <figure>
+                <img src="imagem/guardies-da-galxia_1.jpg" alt="arranhacel">
+                <figcaption>Guardios da Galaxia</figcaption>
+            </figure>
+            <figure>
+                <img src="imagem/luta.jpg" alt="arranhacel">
+                <figcaption>Luta</figcaption>
+            </figure>
+        </div>
     </section>
     <br>
     <br>
