--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
             </ul>
         </div>
         <div class="figuras">
+            <a href="detalhe.html" class="link">
             <figure>
                 <img src="imagem/arranhaceu.jpg" alt="arranhacel">
                 <figcaption>Arranhaceu</figcaption>
             </figure>
+            </a>
             <figure>
                 <img src="imagem/casa-do-lago.jpg" alt="arranhacel">
                 <figcaption>Casa do Lago</figcaption>
@@ -80,15 +82,183 @@
             </figure>
         </div>
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <!-- seção postes-->
+    <section class="posts">
+        <div class="videos">
+            <article>
+                <!--aside icon-->
+                <aside>
+                    <i class="fa fa-film font350 icone"></i>
+                </aside>
+                <!--Video e titulo do video-->
+                <main>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/r8KlxpjXZeI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <div class="subtitulo font200">Arranha-Ceu</div>
+                </main>
+                <!--aside opçoes-->
+                <aside class="options">
+                    <div>
+                        <a href="detalhe.html" class="link"><i class="fa fa-info-circle"></i></a>
+                    </div>
+                    <div>
+                        <i class="fa fa-heart-o"></i>
+                    </div>
+                    <div>
+                        <i class="fa fa-share-alt"></i>
+                    </div>
+                </aside>
+            </article>
+            <article>
+                <!--aside icon-->
+                <aside>
+                    <i class="fa fa-tv font350 icone"></i>
+                </aside>
+                <!--Video e titulo do video-->
+                <main>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/SHaIhMRiyhk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <div class="subtitulo font200">Próxima Para Apocalipse</div>
+                </main>
+                <!--aside opçoes-->
+                <aside class="options">
+                    <div>
+                        <i class="fa fa-info-circle"></i>
+                    </div>
+                    <div>
+                        <i class="fa fa-heart-o"></i>
+                    </div>
+                    <div>
+                        <i class="fa fa-share-alt"></i>
+                    </div>
+                </aside>
+            </article>
+            <article>
+                <!--aside icon-->
+                <aside>
+                    <i class="fa fa-gamepad font350 icone"></i>
+                </aside>
+                <!--Video e titulo do video-->
+                <main>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/5IgGkfPbMzg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <div class="subtitulo font200">The Walking Dead</div>
+                </main>
+                <!--aside opçoes-->
+                <aside class="options">
+                    <div>
+                        <i class="fa fa-info-circle"></i>
+                    </div>
+                    <div>
+                        <i class="fa fa-heart-o"></i>
+                    </div>
+                    <div>
+                        <i class="fa fa-share-alt"></i>
+                    </div>
+                </aside>
+            </article>
+            <article>
+                <!--aside icon-->
+                <aside>
+                    <i class="fa fa-film font350 icone"></i>
+                </aside>
+                <!--Video e titulo do video-->
+                <main>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/x4Y0PcbeSNM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>                    
+                    <div class="subtitulo font200">Liga da Justiça</div>
+                </main>
+                <!--aside opçoes-->
+                <aside class="options">
+                    <div>
+                        <i class="fa fa-info-circle"></i>
+                    </div>
+                    <div>
+                        <i class="fa fa-heart-o"></i>
+                    </div>
+                    <div>
+                        <i class="fa fa-share-alt"></i>
+                    </div>
+                </aside>
+            </article>
+        </div>
+        <div class="lateral">
+            <form action="" method="submit" class="pesquisa">
+                <input type="search" placeholder="Pesquisar">
+                <button type="submit"><i class="fa fa-search fa-lg"></i></button>
+            </form>
+            <div class="banner_lateral">
+                <img src="imagem/banerlateral.jpg" alt="banner lateral">
+            </div>
+            <table class="font090 continua">
+                <caption class="subtitulo font250 esquerda espaço_abaixo">Ranking</caption>
+                <thead>
+                    <tr>
+                        <th>Posição</th>
+                        <th>Nome do trailer</th>
+                        <th>Views</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>1</th>
+                        <td>Warcraft</td>
+                        <td>11.550</td>
+                    </tr>
+                    <tr>
+                        <th>2</th>
+                        <td>Warcraft</td>
+                        <td>11.550</td>
+                    </tr>
+                    <tr>
+                        <th>3</th>
+                        <td>Warcraft</td>
+                        <td>1.550</td>
+                    </tr>
+                    <tr>
+                        <th>4</th>
+                        <td>Warcraft</td>
+                        <td>4.550</td>
+                    </tr>
+                    <tr>
+                        <th>5</th>
+                        <td>Warcraft</td>
+                        <td>14.550</td>
+                    </tr>
+                    <tr>
+                        <th>6</th>
+                        <td>Warcraft</td>
+                        <td>2.550</td>
+                    </tr>
+                    <tr>
+                        <th>7</th>
+                        <td>Warcraft</td>
+                        <td>7.550</td>
+                    </tr>
+                    <tr>
+                        <th>8</th>
+                        <td>Warcraft</td>
+                        <td>1.550</td>
+                    </tr>
+                    <tr>
+                        <th>9</th>
+                        <td>Warcraft</td>
+                        <td>1.550</td>
+                    </tr>
+                    <tr>
+                        <th>10</th>
+                        <td>Warcraft</td>
+                        <td>6.550</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+    <footer>
+        <ul class="horizontal subtitulo font150 rodape">
+            <li><a class="link" href="#">Inicio</a></li>
+            <li>Quen somos</li>
+            <li>Termos</li>
+            <li>Contatos</li>
+            <li>Ajudar</li>
+            <li>Copyright (c) 2018 Apreda Codigo</li>
+        </ul>
+    </footer>
 </body>
 </html>
