--- a/detalhe.html
+++ b/detalhe.html
@@ -16,8 +16,118 @@
     <link rel="stylesheet" type="text/css" href="css/megatrailers.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="player">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/r8KlxpjXZeI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        
+    </section>
+    <section class="movie_info">
+        <div class="parte_superior"> 
+            <div class="banner">
+                <img src="imagem/banner.png" alt="banner superior">
+            </div>
+        </div>
+        <div class="logo">
+            <img src="imagem/logo.png" alt="Logo do saite">
+        </div>
+        <div class="logo_face">
+            <div class="boas_vindas">Login,<br>Cadastre-se</div>
+            <img src="imagem/logo face.png" alt="logo facebook">
+        </div>
+        <div class="area_info">
+            <aside class="cartaz_detalhe">
+                <figure>
+                    <img src="imagem/arranhaceu.jpg" alt="arranhacel">
+                </figure>
+                <ul class="horizontal star">
+                    <li><i class="fa fa-star-o"></i></li>
+                    <li><i class="fa fa-star-o"></i></li>
+                    <li><i class="fa fa-star-o"></i></li>
+                    <li><i class="fa fa-star-o"></i></li>
+                    <li><i class="fa fa-star-o"></i></li>
+                </ul>
+                <div class="data_lancamento">
+                    <i class="fa fa-calendar fa-2x"></i>
+                    <p class="titulo font090">16 julho 2018</p>
+                </div>
+            </aside>
+            <article class="trailer_detalhe">
+                <header class="titulo_detalhe">
+                    <div class="subtitulo font350">Arranhaceu</div>
+                    <div class="subtitulo font200">Corragem Sem Limite</div>
+                    <ul class="horizontal titulo espaco_acima" >
+                        <li class="ativo linha">Sinopse</l>
+                        <li>Critica (Sem Espoilers)</li>
+                        <li>Critica (com Espoilers)</li>
+                    </ul>
+                </header>
+                <div class="corpo_artigo">
+                    <main class="texto_artigo">
+                        <div class="descricao">
+                            <p>Responsável pela segurança de arranha-céus, o veterano de guerra americano e ex-líder da operação de resgate do FBI, Will Sawyer, é acusado de ter colocado o edifício mais alto e mais seguro da China em chamas. Cabe ao agente achar os culpados pelo incêndio, salvar sua família que está presa dentro do prédio e limpar seu nome.</p>
+                            <p>Responsável pela segurança de arranha-céus, o veterano de guerra americano e ex-líder da operação de resgate do FBI, Will Sawyer, é acusado de ter colocado o edifício mais alto e mais seguro da China em chamas. Cabe ao agente achar os culpados pelo incêndio, salvar sua família que está presa dentro do prédio e limpar seu nome.</p>
+                            <p>Responsável pela segurança de arranha-céus, o veterano de guerra americano e ex-líder da operação de resgate do FBI, Will Sawyer, é acusado de ter colocado o edifício mais alto e mais seguro da China em chamas. Cabe ao agente achar os culpados pelo incêndio, salvar sua família que está presa dentro do prédio e limpar seu nome.</p>
+                        </div>
+                        <div class="comentario">
+                            <div class="subtitulo font200 linha espaço_acima">Comentários</div>
+                        </div>
+                        <br>.
+                        <br>.
+                        <br>.
+                        <br>.
+                        <br>.
+                        <br>.
+                        <br>.
+                        <br>.
+                        <br>.
+                        <br>.
+                    </main>
+                    <aside class="lateral_detalhe">
+                        <div class="bannerlateral_detalhe">
+                            <img src="imagem/banerlateral.jpg" alt="banner lateral">
+                        </div>
+                        <table class="font090 continua">
+                            <caption class="subtitulo font250 esquerda espaço_abaixo">Ranking</caption>
+                            <thead>
+                                <tr>
+                                    <th>Posição</th>
+                                    <th>Nome do trailer</th>
+                                    <th>Views</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>1</th>
+                                    <td>Warcraft</td>
+                                    <td>11.550</td>
+                                </tr>
+                                <tr>
+                                    <th>2</th>
+                                    <td>Warcraft</td>
+                                    <td>11.550</td>
+                                </tr>
+                                <tr>
+                                    <th>2</th>
+                                    <td>Warcraft</td>
+                                    <td>11.550</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </aside>
+                </div>
+            </article>
+        </div>
+        <footer>
+            <ul class="horizontal subtitulo font150 rodape">
+                <li><a class="link" href="#">Inicio</a></li>
+                <li>Quen somos</li>
+                <li>Termos</li>
+                <li>Contatos</li>
+                <li>Ajudar</li>
+                <li>Copyright (c) 2018 Apreda Codigo</li>
+            </ul>
+        </footer> 
 </body>
 </html>
