--- a/index.html
+++ b/index.html
@@ -52,32 +52,32 @@
         <div class="figuras">
             <a href="detalhe.html" class="link">
             <figure>
-                <img src="imagem/arranhaceu.jpg" alt="arranhacel">
+                <img class="cartaz" src="imagem/arranhaceu.jpg" alt="arranhacel">
                 <figcaption>Arranhaceu</figcaption>
             </figure>
             </a>
             <figure>
-                <img src="imagem/casa-do-lago.jpg" alt="arranhacel">
+                <img class="cartaz" src="imagem/casa-do-lago.jpg" alt="arranhacel">
                 <figcaption>Casa do Lago</figcaption>
             </figure>
             <figure>
-                <img src="imagem/desejo-de-matar_1.jpg" alt="arranhacel">
+                <img class="cartaz" src="imagem/desejo-de-matar_1.jpg" alt="arranhacel">
                 <figcaption>Desejo de Matar</figcaption>
             </figure>
             <figure>
-                <img src="imagem/escobar.jpg" alt="arranhacel">
+                <img class="cartaz" src="imagem/escobar.jpg" alt="arranhacel">
                 <figcaption>Escobar</figcaption>
             </figure>
             <figure>
-                <img src="imagem/extinção.jpg" alt="arranhacel">
+                <img class="cartaz" src="imagem/extinção.jpg" alt="arranhacel">
                 <figcaption>Extinção</figcaption>
             </figure>
             <figure>
-                <img src="imagem/guardies-da-galxia_1.jpg" alt="arranhacel">
+                <img class="cartaz" src="imagem/guardies-da-galxia_1.jpg" alt="arranhacel">
                 <figcaption>Guardios da Galaxia</figcaption>
             </figure>
             <figure>
-                <img src="imagem/luta.jpg" alt="arranhacel">
+                <img class="cartaz" src="imagem/luta.jpg" alt="arranhacel">
                 <figcaption>Luta</figcaption>
             </figure>
         </div>
